<resources>
    <string name="app_name">Project</string>
    <string name="todo">Content</string>
    <string name="Task">Task</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="StartingTime">Starting Time</string>
    <string name="AddTask">Add Task</string>
    <string name="Selecttime">Select Time</string>
    <string name="Add">Add</string>
    <string name="Start">Start</string>
    <string name="Schedule">SCHEDULE</string>
    <string name="updatetask">Update Task</string>
    <string name="Tasks">TASKS</string>
</resources>