<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".DetailView">

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="190dp"
        app:cardCornerRadius="100dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_snowboarding_24"
            android:padding="20dp"
             />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_centerInParent="true"

        >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/Task"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_marginStart="130dp"
            android:textStyle="bold"


            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Title :"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/detailtitle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/Title"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/blue"

            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Description :"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp" />
    <TextView
        android:id="@+id/detaildescription"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Description"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/blue"

        />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="StartingTime :"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/detailstarttime"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/StartingTime"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/blue"

        />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="278dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="66dp"
        android:src="@drawable/baseline_edit_24"
        app:maxImageSize="25dp"
        android:contentDescription="@string/todo"/>


</RelativeLayout>